<resources>
    <string name="app_name">Klubbhus</string>
    <string name="tab_text_home">Home</string>
    <string name="tab_text_memberships">My memberships</string>
    <string name="tab_text_profile">Profile</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_manager">Manage Organizations</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="filter">"Filter"</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="firstname">First name</string>
    <string name="lastname">Last name</string>
    <string name="phone_number">Phone number</string>
    <string name="create_user">Create User</string>
    <string name="cancel">Cancel</string>
    <string name="your_organizations">Your organizations</string>
    <string name="organization_name">Organization name</string>
    <string name="membership_price">Membership price</string>
    <string name="organization_description">Organization description</string>
    <string name="register_organization">Register organization</string>
    <string name="description">Description</string>
    <string name="my_memberships">"My Memberships"</string>
    <string name="qr_description">"Your personal QR for all your memberships"</string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="sign_out">Sign out</string>
    <string name="join_club">Join club</string>
    <string name="manageorgs">Manage organzations</string>
    <string name="create_new_user">Create new user</string>
    <string name="create_new_organization">Create new Organization</string>
    <string name="pref_key_rear_camera_preview_size" translatable="false">rcpvs</string>
    <string name="pref_key_rear_camera_picture_size" translatable="false">rcpts</string>
    <string name="pref_key_front_camera_preview_size" translatable="false">fcpvs</string>
    <string name="pref_key_front_camera_picture_size" translatable="false">fcpts</string>
    <string name="pref_key_still_image_object_detector_enable_multiple_objects" translatable="false">siodemo</string>
    <string name="pref_key_still_image_object_detector_enable_classification" translatable="false">siodec</string>
    <string name="pref_key_live_preview_object_detector_enable_multiple_objects" translatable="false">lpodemo</string>
    <string name="pref_key_live_preview_object_detector_enable_classification" translatable="false">lpodec</string>
    <string name="pref_key_live_preview_face_detection_landmark_mode" translatable="false">lpfdlm</string>
    <string name="pref_key_live_preview_face_detection_contour_mode" translatable="false">lpfdcm</string>
    <string name="pref_key_live_preview_face_detection_classification_mode" translatable="false">lpfdcfm</string>
    <string name="pref_key_live_preview_face_detection_performance_mode" translatable="false">lpfdpm</string>
    <string name="pref_key_live_preview_face_detection_face_tracking" translatable="false">lpfdft</string>
    <string name="pref_key_live_preview_face_detection_min_face_size" translatable="false">lpfdmfs</string>
    <string name="pref_key_live_preview_automl_remote_model_name" translatable="false">lparmn</string>
    <string name="pref_key_live_preview_automl_remote_model_choices" translatable="false">lparmc</string>
    <string name="pref_entries_automl_models_local">Local</string>
    <string name="pref_key_camera_live_viewport" translatable="false">clv</string>
    <string name="about">About</string>
    <string name="contact">Contact</string>
    <string name="member_since">Member since</string>
    <string name="payment_due">Your next payment is due in </string>
    <string name="scan_a_new_qr_code">Scan a new QR code</string>
    <string name="authenticate_user">Authenticate user</string>
    <string name="has_paid">Has paid</string>
    <string name="next_payment_due">Payment due</string>
    <string name="QR_scanner">QR Scanner</string>
    <string name="not_a_member">Member not found</string>
    <string name="payment_status">Payment status</string>
    <string name="payment_false">Next Payment is due</string>
    <string name="payment_true">All good!</string>

    <string name="contact_email">Contact Email</string>
    <string name="title_activity_club_admin">ClubAdminActivity</string>
    <string name="pay_with_vipps">Pay with vipps</string>
    <string name="latest_vipps_ver">You must update to latest Vipps version</string>
    <string name="membership_of">Membership of</string>
    <string name="for_year">for year</string>

    <!--Create new org - Validation responses-->
    <string name="organization_name_not_empty">Organization name can not be empty!</string>
    <string name="invalid_email">Not a valid email!</string>
    <string name="price_not_empty">The price can\'t be empty!</string>
    <string name="description_not_empty">Description can\'t be empty!</string>

    <!--User feedback-->
    <string name="userfeedback_cant_be_resolved">"I'm terribly sorry, this is not even your fault, the " +
                                                "server is trying to make coffee in a teapot .."
    </string>
    <string name="generic_error_response">Sorry, something went wrong. Please try again later</string>
    <string name="userfeedback_deeplink_error">Sorry, something went wrong. Please try again later</string>

    <string name="has_paid_symbol">Has paid symbol</string>
    <string name="member_name">Member name</string>
    <string name="joined">joined</string>

    <string name="field_cant_be_empty">Field can\'t be empty!</string>
    <string name="invalid_first_name">Invalid first name!</string>
    <string name="invalid_last_name">Invalid last name!</string>
    <string name="invalid_phonenumber">Invalid phonenumber!</string>


</resources>
