<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="16dp">

    <EditText
        android:id="@+id/firstname_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusedByDefault="true"
        android:text="Teste"
        android:hint="@string/firstname" />

    <EditText
        android:id="@+id/lastname_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/firstname_input"
        android:text="Testesen"
        android:hint="@string/lastname" />

    <EditText
        android:id="@+id/email_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lastname_input"
        android:hint="@string/prompt_email"
        android:text="test@test.no"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email_input"
        android:hint="@string/prompt_password"
        android:text="123456"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/phonenumber_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_input"
        android:hint="@string/phone_number"
        android:text="12345678"
        android:inputType="phone" />

    <LinearLayout
        android:id="@+id/buttons_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/phonenumber_input"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/create_user_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_user" />

        <Button
            android:id="@+id/cancel_new_user_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="@string/cancel" />
    </LinearLayout>

    <TextView
        android:id="@+id/swipeLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttons_container"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="Swipe right to login" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/swipeLeft"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_arrow_left_black_30dp" />

</RelativeLayout>