<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/organization_profile_picture"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/cardview_dark_background"

        />

    <LinearLayout
        android:id="@+id/input_field_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/organization_profile_picture"
        android:orientation="vertical"
        android:padding="16dp"
        >

        <EditText
            android:id="@+id/organization_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/organization_name" />

        <EditText
            android:id="@+id/membership_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/membership_price"
            android:inputType="number" />

        <EditText
            android:id="@+id/contact_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:hint="Contact info"
            android:inputType="textMultiLine"
            android:maxLines="10"
            android:minLines="6" />

        <EditText
            android:id="@+id/organization_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/organization_description" />
    </LinearLayout>

    <LinearLayout
        android:layout_below="@id/input_field_container"
        android:id="@+id/buttons_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/register_organization"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_organization" />

        <Button
            android:id="@+id/cancel_registration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />
    </LinearLayout>

</RelativeLayout>