<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="16dp">

    <RelativeLayout
        android:id="@+id/details_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/profile_picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="100dp"
            android:src="@mipmap/ic_launcher" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/profile_picture"
            android:gravity="end"
            android:orientation="vertical">

            <TextView
                android:id="@+id/firstname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/firstname" />

            <TextView
                android:id="@+id/lastname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lastname" />


            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="email"
                android:text="dummy@gmail.com" />

            <TextView
                android:id="@+id/phonenumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/email"
                android:autoLink="phone"
                android:text="+47 386691230" />
        </LinearLayout>
    </RelativeLayout>
    <TextView
        android:id="@+id/your_organizations_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_organizations"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_below="@id/details_container"
        android:layout_centerHorizontal="true"
        android:layout_margin="16dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/members_of_recycler_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/your_organizations_header"
        android:layout_centerHorizontal="true"/>


</RelativeLayout>